<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id = "@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="담당 매니저를 선택해주세요."
        android:textSize="18sp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="32sp"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/listOfManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="매니저 리스트"
        android:textSize="18sp"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="32sp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioGroup
        android:id="@+id/select_gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listOfManager">

        <RadioButton
            android:id="@+id/select_gender_all_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_radio_btn"

            android:button="@null"
            android:checked="true"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/all"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/select_gender_man_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="true"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/man"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/select_gender_woman_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/woman"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="20sp" />

    </RadioGroup>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/manager_list"
        android:layout_width="wrap_content"
        android:layout_height="350sp"
        android:layout_marginTop="40sp"
        app:layout_constraintStart_toStartOf="@id/select_gender_radio_group"
        app:layout_constraintEnd_toEndOf="@id/select_gender_radio_group"
        app:layout_constraintTop_toBottomOf="@+id/select_gender_radio_group"
        >


    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>